<resources>
    <string name="app_name">Кадр</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="guest">Продолжить как гость</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повтор пароля</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="tab_search">Поиск</string>
    <string name="tab_catalog">Каталог</string>
    <string name="tab_list">Список</string>
    <string name="tab_profile">Профиль</string>
    <string name="find">Найти</string>
    <string name="photo">Фото</string>
    <string name="video_frame">Кадр из видео</string>
    <string name="add_to_list">Добавить в список</string>
    <string name="logout">Выйти</string>
    <string name="nickname">Ник</string>
</resources>
